# tensorrt

./: .gitignore  .gitmodules  .style.yapf  README.md  install_dependencies.sh  pytest.ini  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: main.yml
tests/: test_yapf_format.py  utils.py
tftrt/: __init__.py
tftrt/benchmarking-cpp/: BUILD  CMakeLists.txt  README.md  build.sh  main.cc
tftrt/benchmarking-cpp/build-scripts/: setup.sh  tf-profiler.patch  tftrt-build.sh
tftrt/benchmarking-python/: CHANGELOG.md  benchmark_args.py  benchmark_autotuner.py  benchmark_info.py  benchmark_logger.py  benchmark_profiling.py  benchmark_runner.py  benchmark_utils.py  dataloading_utils.py  versioning_utils.py
tftrt/benchmarking-python/helper_scripts/: install_pycocotools.sh
tftrt/benchmarking-python/huggingface/bert/: base_run_inference.sh  download_all_models.sh  generate_save_models_from_hf.py  generate_saved_models.py  infer.py  transformers.py
tftrt/benchmarking-python/huggingface/gpt2/: base_run_inference.sh  dataloader.py  devs_dataset.py  download_all_models.sh  generate_saved_models.py  infer.py  run_all.sh  run_inference.sh
tftrt/benchmarking-python/huggingface/t5/: base_run_inference.sh  dataloader.py  download_c4.py  generate_all_saved_models.sh  generate_saved_model.py  infer.py  run_all.sh
tftrt/benchmarking-python/image_classification/: Colab-TFv2-TF-TRT-inference-from-Keras-saved-model.ipynb  README.md  TF-TRT-inference-from-saved-model.ipynb  base_run_inference.sh  dataloading.py  image_classification.py  infer.py  preprocessing.py
tftrt/benchmarking-python/logging_utils/: formatters.py  metaclasses.py
tftrt/benchmarking-python/nvidia_examples/bert_tf2/: analysis.txt  infer.py  run_inference.sh  squad_lib.py  tokenization.py
tftrt/benchmarking-python/nvidia_examples/dlrm_tf2/: datasets.py  infer.py  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/efficientdet/: analysis.txt  infer.py  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/efficientnet_base/: infer.py
tftrt/benchmarking-python/nvidia_examples/efficientnet_v1_B0_tf2/: analysis.txt  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/efficientnet_v1_B4_tf2/: analysis.txt  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/efficientnet_v2_tf2/: analysis.txt  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/electra_tf2/: file_utils.py  infer.py  run_inference.sh  squad_utils.py  tokenization.py  tokenization_utils.py
tftrt/benchmarking-python/nvidia_examples/mrcnn_tf2/: analysis.txt  infer.py  run_inference.sh  utils.py
tftrt/benchmarking-python/nvidia_examples/nnunet2d_tf2/: analysis.txt  infer.py  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/nnunet3d_tf2/: analysis.txt  infer.py  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/resnet50-v1.5_tf1/: infer.py  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/sim_tf2/: analysis.txt  infer.py  run_inference.sh
tftrt/benchmarking-python/nvidia_examples/unet_medical_tf2/: infer.py  run_inference.sh  utils.py
tftrt/benchmarking-python/nvidia_examples/wide_deep_tf2/: analysis.txt  infer.py  run_inference.sh
tftrt/benchmarking-python/object_detection/: README.md  base_run_inference.sh  infer.py  object_detection.py
tftrt/benchmarking-python/template/: infer.py  run_inference.sh
tftrt/benchmarking-python/tf_hub/albert/: analysis.txt  base_run_inference.sh  dataloading.py  (+6 more)
tftrt/benchmarking-python/transformers/: transformers.py
tftrt/blog_posts/: README.md
tftrt/blog_posts/Leveraging TensorFlow-TensorRT integration for Low latency Inference/: tf2_inference.py
tftrt/examples/: benchmark_args.py  benchmark_runner.py  benchmark_utils.py  dataloading_utils.py  dynamic_shapes.ipynb  image_classification.py  utils.py
tftrt/examples-cpp/benchmark_runner/: BUILD  CMakeLists.txt  README.md  convert_model.py  main.cc  main.cpp  runner.cpp  runner.h  tf2_save_model.py  tftrt-build.sh
tftrt/examples-cpp/image_classification/: BUILD  README.md  main.cc  tftrt-build.sh  tftrt-conversion.ipynb
tftrt/examples-cpp/mnist_demo/: CMakeLists.txt  README.md  mnist.cc
tftrt/examples-py/: PTQ_example.ipynb  basic_example.py  dynamic_shapes.ipynb
tftrt/examples/deploying_on_triton/: README.md  triton_client.py
tftrt/examples/image-classification/: Colab-TF-TRT-inference-from-Keras-saved-model.ipynb  Colab-TF20-TF-TRT-inference-from-Keras-saved-model.ipynb  NGC-TFv2-TF-TRT-inference-from-Keras-saved-model.ipynb  README.md  TF-TRT-inference-from-saved-model.ipynb  TF-TRT-inference-from-slim-model-checkpoint.ipynb  TFv2-TF-TRT-inference-from-Keras-saved-model.ipynb  image_classification.ipynb  image_classification.py  install_dependencies.sh  preprocessing.py  run_v2.sh
tftrt/examples/image_classification/: NGC-TFv2-TF-TRT-inference-from-Keras-saved-model.ipynb  README.md  TF-TRT-inference-from-saved-model.ipynb  Using Dynamic Shapes.ipynb  base_run_inference.sh  image_classification.py  preprocessing.py
tftrt/examples/ncf/: README.md  inference.py
tftrt/examples/object_detection/: README.md  __init__.py  base_run_inference.sh  graph_utils.py  install_dependencies.sh  object_detection.py  single_test.sh  test.py  v2_test.sh
tftrt/examples/presentations/: GTC-April2021-Dynamic-shape-BERT.ipynb  GTC-April2021-Dynamic-shape-ResNetV2.ipynb  GTC-April2021-Dynamic-shape-UNet.ipynb  GTC-April2021-How-to-use-ResNetV2-FP16.ipynb  GTC-April2021-How-to-use-ResNetV2-INT8.ipynb
tftrt/examples/recommendation/: README.md  inference.py
tftrt/examples/transformers/: base_run_inference.sh  generate_save_models_from_hf.py  transformers.py
tftrt/presentations/: GTC-April2021-Dynamic-shape-ResNetV2.ipynb  GTC-April2021-Dynamic-shape-UNet.ipynb  GTC-April2021-How-to-use-ResNetV2-INT8.ipynb
tftrt/tests/: README.md
tftrt/triton/: README.md  config.pbtxt  tf_trt_resnet50.py
tftrt/user-guide/cpp/simple-example/: CMakeLists.txt  build.sh  main.cc
tftrt/user-guide/py/: dynamic_shapes_bert_example.py  simple_mnist_example.py  simple_quantization_example.py
(+205 files in other folders)
